--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "ethers": "^5.7.1",
     "formik": "^2.2.9",
+    "metamask-react": "^2.4.0",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
