--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "metamask-react": "^2.4.0",
     "next": "12.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.0"
   },
   "devDependencies": {
     "@types/node": "18.8.2",
